# memos_mcp

./: .example.env  CHANGELOG.md  README.md  main.py  pyproject.toml
src/memos_mcp/: __main__.py  client.py  models.py  server.py
tests/: test_memos_client.py
