[project]
name = "rmc-memos-mcp"
version = "0.1.2"
description = "Model Context Protocol (MCP) server for usememos/memos"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "rmc" }
]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/rmc8/memos_mcp"
Repository = "https://github.com/rmc8/memos_mcp"
Issues = "https://github.com/rmc8/memos_mcp/issues"

[project.scripts]
memos-mcp = "memos_mcp.server:main"
rmc-memos-mcp = "memos_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pyright]
extraPaths = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/memos_mcp"]
